# multilingual-text-to-amr

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  convert_to_safetensors.py  example_config.json  example_predict_config.json  example_train_config.json  hparams.yaml  installation-notes.md  merge_adapters.py  pyproject.toml  setup.cfg  setup.py  todo.md  upload_to_hub.sh
configs/: en_es_nl_mbart_large_cc25.json  en_es_nl_stratified_mbart_large_cc25.json  en_mbart_large_cc25.json  es_mbart_large_cc25.json  es_nl_mbart_large_cc25.json  es_nl_stratified_mbart_large_cc25.json  nl_mbart_large_cc25.json
deepspeed_configs/: ds_config_zero2.json  ds_config_zero3.json  ds_config_zero3_no_offload_param.json
extras/: corpus_statistics.ipynb  results_analysis.ipynb
src/amr_bart/: denoising_dataset.py  run_bart_dlm.py
src/amr_bart/amr_bart/: linearization.py  modeling_amr_bart.py  modeling_outputs.py  prepostprocessor.py  tokenization_amr_bart.py  trainer_amr_bart.py
src/amr_bart/data/: IO.py  dataset_amr_bart.py  linearization.py  new_linearization.py  penman.py  postprocessing.py
src/amr_bart/utils/: amr_fix.py  amr_translate.py  collect_special_tokens.py  extract_data_from_amr.py  new_tokens.py  utils.py
src/amr_mbart/: amr_model.py  amr_tokenizer.py  denoising_collator.py  run_mbart_dlm.py
src/amr_mbart/amr_mbart/: modeling_amr_bart.py  tokenization_amr_bart.py
src/amr_mbart/data/: IO.py  dataset_amr_mbart.py  linearization.py  penman.py  postprocessing.py
src/amr_mbart/utils/: amr_translate.py  extract_data_from_amr.py  prepare_tokenizer.py  utils.py
src/mbart_amr/: run_mbart_amr.py  trainer.py
src/mbart_amr/constraints/: __init__.py  allowed.py  base.py  constraints.py  first_token.py  functions.py  open_close.py
src/multi_amr/: amr_translate.py  arguments.py  evaluate.py  evaluate_amr.py  extract_pred_ref.py  merge_adapters.py  parse_cli.py  parse_with_openai.py  peft_callback.py  predict.py  run_amr_generation.py  score_openai_smatch.py  tokenization.py  trainer.py  upload_to_hub.py
src/text_to_amr/: denoising_dataset.py  run_mbart_dlm.py
tests/: conftest.py  test_allowed_processor.py  test_constraint_functions.py  test_dataset_and_collator.py  test_firsttoken_processor.py  test_generation_corpus.py  test_linearization.py  test_linearization_corpus.py  test_openclose_processor.py  test_src_lang_sampler.py  test_tokenization.py  test_tokenization_corpus.py  test_tokenizer.py
(+50 files in other folders)
